tests/NormalTests/paczka1/small_fuzzy/78329533.err
Error in line 6: 3MUleKPjaU A763 42,51
Error in line 5: jDF A763 20,2
Error in line 11: h4bUcuzf A942 53,44
Error in line 8: 3MUleKPjaU A763 48,0
